fixed white space title issue for toolbelt added styling and turned synonyms on

--- a/app/assets/stylesheets/ninja.scss
+++ b/app/assets/stylesheets/ninja.scss
@@ -115,7 +115,14 @@
     border-top: 1px solid black;
     background-color: white;
     .powered-by {
-      padding: 15px;
+      &:first-child {
+        padding: 15px;
+        padding-bottom: 0px;
+      }
+      &:last-child {
+        padding: 15px;
+        padding-top: 0px;
+      }
     }
   }
 }
@@ -156,6 +163,7 @@ rnja-tool-belt {
       }
     }
     .tool-selectors {
+      padding: 0px 10px;
       button {
         margin: 10px auto;
         display: block;
